validation exception handler changed, swagger enabled